# soci

./: .gitignore  CMakeLists.txt
cmake/: SociDependencies.cmake  SociUtilities.cmake  SociVersion.cmake
cmake/dependencies/: Threads.cmake
include/soci/sqlite3/: soci-sqlite3.h
src/: CMakeLists.txt
src/backends/sqlite3/: CMakeLists.txt  blob.cpp
src/core/: CMakeLists.txt
